--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-.DS_Store
+*.class
+/template/*.pptx
+/stage/*
+/stage-archive/*
+target/
+*.zip
+*/.DS_Store
 *.html
+.DS_Store
+build/
+dist/
+*.egg-info/
+/tests/
+/docs/build/
+__pycache__/
+*.swp
+.DS_Store
+~*
+*~
+~$*
+.vscode/
+*.swp
+/student-guide/diagram/*
 /scripts/raw-*
 /scripts/*.class
