--- a/setup/tidb-lab-aws-1-node-amz2/template-single-node-hybrid.yaml
+++ b/setup/tidb-lab-aws-1-node-amz2/template-single-node-hybrid.yaml
@@ -31,17 +31,20 @@ tikv_servers:
   - host: <HOST_PD1_PRIVATE_IP>
     port: 20160
     status_port: 20180
+    deploy_dir: /tidb-deploy/tikv-20160
+    data_dir: /tidb-data/tikv-20160
+    log_dir: /tidb-deploy/tikv-20160/log
     config:
       server.labels:
         region: oregon
         zone: az1
-# tiflash_servers:
-#   - host: <HOST_PD1_PRIVATE_IP>
-#     tcp_port: 9000
-#     flash_service_port: 3930
-#     deploy_dir: /tidb-deploy/tiflash-9000
-#     data_dir: /tidb-data/tiflash-9000
-#     log_dir: /tidb-deploy/tiflash-9000/log
+tiflash_servers:
+  - host: <HOST_PD1_PRIVATE_IP>
+    tcp_port: 9000
+    flash_service_port: 3930
+    deploy_dir: /tidb-deploy/tiflash-9000
+    data_dir: /tidb-data/tiflash-9000
+    log_dir: /tidb-deploy/tiflash-9000/log
 monitoring_servers:
   - host: <HOST_PD1_PRIVATE_IP>
 grafana_servers:
