mysql scripts updated

--- a/setup/tidb-lab-mysql-init-amz2/my3306.cnf
+++ b/setup/tidb-lab-mysql-init-amz2/my3306.cnf
@@ -2,5 +2,6 @@
 basedir = /usr/local/mysql/
 datadir = /data/my3306
 server_id = 1
+log-bin=mysql-bin1
 port = 3306
 socket = /data/my3306/mysql.sock
