--- a/setup/tidb-lab-mysql-init-amz2/my3307.cnf
+++ b/setup/tidb-lab-mysql-init-amz2/my3307.cnf
@@ -2,5 +2,6 @@
 basedir = /usr/local/mysql/
 datadir = /data/my3307
 server_id = 2
+log-bin=mysql-bin2
 port = 3307
 socket = /data/my3307/mysql.sock
