--- a/scripts/misc/lightning-universe-planets-csv-physical.toml
+++ b/scripts/misc/lightning-universe-planets-csv-physical.toml
@@ -12,12 +12,12 @@ meta-schema-name = "lightning_metadata"
 [checkpoint]
 enable = true
 driver = "file"
-dsn = "/tmp/tidb_lightning_checkpoint_p1.pb"
+dsn = "/tmp/tidb_lightning_checkpoint_physical.pb"
 
 [tikv-importer]
 backend = "local"
-incremental-import = true
-sorted-kv-dir = "../stage/sorted-kv-dir-p1"
+incremental-import = false
+sorted-kv-dir = "../stage/sorted-kv-dir-1"
 
 [mydumper]
 data-source-dir = "./misc/planets-csv-large-1"
@@ -37,7 +37,7 @@ trim-last-separator = false
 [tidb]
 host = "127.0.0.1"
 port = 4000
-user = "root"
-password = ""
+user = "imp"
+password = "q1w2e3R4_"
 status-port = 10080
 pd-addr = "127.0.0.1:2379"
