--- a/setup/tidb-quick-demo-aws-9-nodes-amz2/template-nine-nodes.yaml
+++ b/setup/tidb-quick-demo-aws-9-nodes-amz2/template-nine-nodes.yaml
@@ -8,6 +8,9 @@ server_configs:
   pd:
     replication.location-labels: ["region","zone"]
     replication.max-replicas: 3
+  tidb:
+    security.auto-tls: true
+    graceful-wait-before-shutdown: 10
 pd_servers:
   - host: <HOST_PD1_PRIVATE_IP>
     client_port: 2379
