--- a/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-meta.yaml
+++ b/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-meta.yaml
@@ -17,7 +17,9 @@ topology:
     log_dir: /tidb-deploy/monitor-9100/log
   server_configs:
     tidb:
-     security.auto-tls: true
+     security.auto-tls: false
+     security.session-token-signing-cert: /home/ec2-user/cert.pem
+     security.session-token-signing-key: /home/ec2-user/key.pem
      graceful-wait-before-shutdown: 10
     tikv: {}
     pd:
