--- a/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-nine-nodes.yaml
+++ b/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-nine-nodes.yaml
@@ -9,6 +9,7 @@ server_configs:
     replication.location-labels: ["region","zone"]
     replication.max-replicas: 3
   tidb:
+    security.auto-tls: true
     security.session-token-signing-cert: /home/ec2-user/cert.pem
     security.session-token-signing-key: /home/ec2-user/key.pem
     graceful-wait-before-shutdown: 10
