--- a/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-tiproxy.toml
+++ b/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-tiproxy.toml
@@ -39,7 +39,7 @@ pd-addrs = "<HOST_PD1_PRIVATE_IP>:2379,<HOST_PD2_PRIVATE_IP>:2379,<HOST_PD3_PRIV
 
 [log]
 
-level = "error"
+level = "warn"
 
 # possible values:
 # 	"tidb" => formats used by tidb, check https://github.com/tikv/rfcs/blob/master/text/0018-unified-log-format.md.
