--- a/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-meta.yaml
+++ b/setup/tidb-quick-demo-aws-9-nodes-tiproxy-amz2/template-meta.yaml
@@ -2,7 +2,7 @@ user: tidb
 tidb_version: v6.5.1
 topology:
   global:
-    user: tidb
+    user: ec2-user
     ssh_port: 22
     ssh_type: builtin
     deploy_dir: /tidb-deploy
