--- a/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes.yaml
+++ b/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes.yaml
@@ -6,7 +6,7 @@ global:
   arch: "amd64"
 server_configs:
   pd:
-    replication.location-labels: ["region","zone"]
+    replication.location-labels: ["region","zone","storage-performance"]
     replication.max-replicas: 3
 pd_servers:
   - host: <HOST_PD1_PRIVATE_IP>
@@ -49,6 +49,7 @@ tikv_servers:
       server.labels:
         region: oregon
         zone: az1
+        storage-performance: high
   - host: <HOST_KV2_PRIVATE_IP>
     port: 20160
     status_port: 20180
@@ -56,6 +57,7 @@ tikv_servers:
       server.labels:
         region: oregon
         zone: az2
+        storage-performance: high
   - host: <HOST_KV3_PRIVATE_IP>
     port: 20160
     status_port: 20180
@@ -63,6 +65,7 @@ tikv_servers:
       server.labels:
         region: oregon
         zone: az3
+        storage-performance: high
 tiflash_servers:
   - host: <HOST_TIFLASH1_PRIVATE_IP>
     tcp_port: 9000
