--- a/setup/tidb-lab-aws-1-node-amz2/template-single-node-hybrid.yaml
+++ b/setup/tidb-lab-aws-1-node-amz2/template-single-node-hybrid.yaml
@@ -46,11 +46,11 @@ tiflash_servers:
     data_dir: /tidb-data/tiflash-9000
     log_dir: /tidb-deploy/tiflash-9000/log
 monitoring_servers:
-  - host: <HOST_PD1_PRIVATE_IP>
+  - host: <HOST_MONITOR1_PRIVATE_IP>
 grafana_servers:
-  - host: <HOST_PD1_PRIVATE_IP>
+  - host: <HOST_MONITOR1_PRIVATE_IP>
 alertmanager_servers:
-  - host: <HOST_PD1_PRIVATE_IP>
+  - host: <HOST_MONITOR1_PRIVATE_IP>
 #pump_servers:
 #  - host: 127.0.0.1
 #drainer_servers:
