--- a/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes.yaml
+++ b/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes.yaml
@@ -16,6 +16,7 @@ pd_servers:
       server.labels:
         region: oregon
         zone: az1
+      advertise-client-urls: "http://<HOST_PD1_PUBLIC_IP>:2379"
   - host: <HOST_PD2_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
@@ -23,6 +24,7 @@ pd_servers:
       server.labels:
         region: oregon
         zone: az2
+      advertise-client-urls: "http://<HOST_PD2_PUBLIC_IP>:2379"
   - host: <HOST_PD3_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
@@ -30,6 +32,7 @@ pd_servers:
       server.labels:
         region: oregon
         zone: az3
+      advertise-client-urls: "http://<HOST_PD3_PUBLIC_IP>:2379"
 tidb_servers:
   - host: <HOST_DB1_PRIVATE_IP>
     port: 4000
