--- a/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes-fff3.yaml
+++ b/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes-fff3.yaml
@@ -14,24 +14,24 @@ pd_servers:
   - host: <HOST_PD1_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD1_PUBLIC_IP>:2379"
     config:
-      advertise-client-urls: "http://<HOST_PD1_PUBLIC_IP>:2379"
       server.labels:
         region: oregon
         zone: az1
   - host: <HOST_PD2_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD2_PUBLIC_IP>:2379"
     config:
-      advertise-client-urls: "http://<HOST_PD2_PUBLIC_IP>:2379"
       server.labels:
         region: oregon
         zone: az2
   - host: <HOST_PD3_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD3_PUBLIC_IP>:2379"
     config:
-      advertise-client-urls: "http://<HOST_PD3_PUBLIC_IP>:2379"
       server.labels:
         region: oregon
         zone: az3
