--- a/setup/tidb-lab-aws-8-nodes-amz2/template-eight-nodes-hybrid.yaml
+++ b/setup/tidb-lab-aws-8-nodes-amz2/template-eight-nodes-hybrid.yaml
@@ -12,6 +12,7 @@ pd_servers:
   - host: <HOST_PD1_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD1_PUBLIC_IP>:2379"
     config:
       server.labels:
         region: oregon
@@ -19,6 +20,7 @@ pd_servers:
   - host: <HOST_PD2_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD2_PUBLIC_IP>:2379"
     config:
       server.labels:
         region: oregon
@@ -26,10 +28,11 @@ pd_servers:
   - host: <HOST_PD3_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD3_PUBLIC_IP>:2379"
     config:
       server.labels:
-        region: virginia
-        zone: az1
+        region: oregon
+        zone: az3
 tidb_servers:
   - host: <HOST_DB1_PRIVATE_IP>
     port: 4000
