--- a/setup/tidb-lab-aws-1-node-amz2/template-single-node-hybrid.yaml
+++ b/setup/tidb-lab-aws-1-node-amz2/template-single-node-hybrid.yaml
@@ -12,6 +12,7 @@ pd_servers:
   - host: <HOST_PD1_PRIVATE_IP>
     client_port: 2379
     peer_port: 2380
+    advertise_client_addr: "http://<HOST_PD1_PUBLIC_IP>:2379"
     config:
       server.labels:
         region: oregon
