--- a/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes.yaml
+++ b/setup/tidb-lab-aws-10-nodes-amz2/template-ten-nodes.yaml
@@ -15,7 +15,7 @@ pd_servers:
     advertise_client_addr: "http://<HOST_PD1_PUBLIC_IP>:2379"
     config:
       server.labels:
-        region: oregon
+        region: seattle
         zone: az1
   - host: <HOST_PD2_PRIVATE_IP>
     client_port: 2379
@@ -23,7 +23,7 @@ pd_servers:
     advertise_client_addr: "http://<HOST_PD2_PUBLIC_IP>:2379"
     config:
       server.labels:
-        region: oregon
+        region: seattle
         zone: az2
   - host: <HOST_PD3_PRIVATE_IP>
     client_port: 2379
@@ -31,7 +31,7 @@ pd_servers:
     advertise_client_addr: "http://<HOST_PD3_PUBLIC_IP>:2379"
     config:
       server.labels:
-        region: oregon
+        region: seattle
         zone: az3
 tidb_servers:
   - host: <HOST_DB1_PRIVATE_IP>
@@ -50,7 +50,7 @@ tikv_servers:
     status_port: 20180
     config:
       server.labels:
-        region: oregon
+        region: seattle
         zone: az1
         storage-performance: high
   - host: <HOST_KV2_PRIVATE_IP>
@@ -58,7 +58,7 @@ tikv_servers:
     status_port: 20180
     config:
       server.labels:
-        region: oregon
+        region: seattle
         zone: az2
         storage-performance: high
   - host: <HOST_KV3_PRIVATE_IP>
@@ -66,7 +66,7 @@ tikv_servers:
     status_port: 20180
     config:
       server.labels:
-        region: oregon
+        region: seattle
         zone: az3
         storage-performance: high
 tiflash_servers:
