--- a/setup/tidb-lab-aws-10-nodes-amz2/template-scale-out-tikv.yaml
+++ b/setup/tidb-lab-aws-10-nodes-amz2/template-scale-out-tikv.yaml
@@ -8,6 +8,6 @@ tikv_servers:
     log_dir: /tidb-deploy/tikv-20160/log
     config:
       server.labels:
-        region: virginia
+        region: seattle
         zone: az4
         storage-performance: high
